# francis-agent

./: .flake8  .flake8.bak  .gitattributes  .gitattributes.bak  .gitignore  .gitignore.bak  .pre-commit-config.yaml  CHANGELOG.md  FrancisPhase4.xml  LICENSE  README.md  SECURITY.md  Test-Phase4.ps1  _sample_plan.json  backfill_mem_index.py  config.toml  francis.backup.py  francis.py  francis.sqlite-shm  francis.sqlite-wal  long_memory.py  memory.json  mypy.ini  phase4.ps1  phase4.ps1.bak_20250923_162933  phase4.ps1.bak_cleanup_20250923_173146  phase4.ps1.bak_cleanup_20250923_173151  phase4.ps1.bak_finaltouch_20250923_175642  phase4.ps1.bak_fix3_20250923_163606  phase4.ps1.bak_fix4_20250923_163715  phase4.ps1.bak_fix5_20250923_163808  phase4.ps1.bak_fix6_20250923_163927  phase4.ps1.bak_fix7_20250923_164130  phase4.ps1.bak_fix7_20250923_164148  phase4.ps1.bak_fix9_20250923_165100  phase4.ps1.bak_fix_everypsi_20250923_173657  phase4.ps1.bak_fix_final_20250923_165402  phase4.ps1.bak_fix_pathlhs_20250923_174644  phase4.ps1.bak_fix_pick_20250923_165609  phase4.ps1.bak_fix_resolvefn_20250923_173855  (+10 more)
.github/: CODEOWNERS  dependabot.yml
backups/: full_notes_20250923_161626_secure.zip.sha256  full_notes_20250923_165505_secure.zip.sha256  full_notes_20250923_165609_secure.zip.sha256  full_notes_20250923_165812_secure.zip.sha256  full_notes_20250923_174047_secure.zip.sha256  full_notes_20250923_174417_secure.zip.sha256  full_notes_20250923_174644_secure.zip.sha256  full_notes_20250923_175643_secure.zip.sha256  full_notes_20250923_182809_secure.zip.sha256  (+4 more)
data/: metrics.json
(+73 files in other folders)
